Adopt formulas in core runtime and exemplar abilities